--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -120,6 +120,7 @@
         font-weight:normal;
         border-top:1px solid #cccccc;
         padding-top:16px;
+        margin-bottom:16px;
     }
     .var_table {
         border-collapse:collapse;
@@ -132,6 +133,33 @@
     }
     .var_table tr {
         border-bottom:1px solid #cccccc;
+    }
+    .repl .console {
+        background-color:#ffffff;
+        padding:2px 4px;
+        border:1px solid #d0d0d0;
+        margin-bottom:8px;
+        font-family:monospace;
+    }
+    .repl pre {
+        font-size:12px;
+        white-space:pre-wrap;
+        max-height:400px;
+        overflow:auto;
+    }
+    .repl .prompt {
+        font-size:12px;
+        position:relative;
+    }
+    .repl input {
+        font-size:12px;
+        border:none;
+        font-family:monospace;
+        outline:none;
+        padding:0px;
+        position:absolute;
+        left:20px;
+        right:0px;
     }
     </style>
 </head>
@@ -177,6 +205,14 @@
                 <div class="location"><span class="filename"><%= frame.pretty_path %></span>, line <span class="line"><%= frame.line %></span></div>
                 <%== highlighted_code_block frame %>
                 
+                <div class="repl">
+                    <h3>REPL</h3>
+                    <div class="console">
+                        <pre></pre>
+                        <div class="prompt">&gt;&gt; <input/></div>
+                    </div>
+                </div>
+                
                 <div class="variable_info"></div>
             </div>
         <% end %>
@@ -190,6 +226,7 @@
     var previous = null;
     var previousFrameInfo = null;
     var frames = document.querySelectorAll("ul.frames li");
+    var frameInfos = document.querySelectorAll(".frame_info");
     
     var header = document.querySelector("header");
     var headerHeight = header.offsetHeight;
@@ -230,10 +267,12 @@
         }
         previousFrameInfo = el;
         previousFrameInfo.style.display = "block";
+        
+        el.querySelector(".repl input").focus();
     }
     
     for(var i = 0; i < frames.length; i++) {
-        (function(el) {
+        (function(index, el, frameInfo) {
             el.onclick = function() {
                 if(previous) {
                     previous.className = "";
@@ -243,7 +282,24 @@
                 
                 selectFrameInfo(el.attributes["data-index"].value);
             };
-        })(frames[i]);
+            var replPre = frameInfo.querySelector(".repl pre");
+            var replInput = frameInfo.querySelector(".repl input");
+            replInput.onkeydown = function(ev) {
+                if(ev.keyCode == 13) {
+                    var text = replInput.value;
+                    replInput.value = "";
+                    apiCall("eval", { "index": index, source: text }, function(response) {
+                        replPre.innerHTML += ">> " + response.highlighted_input + "\n";
+                        if(response.error) {
+                            replPre.innerHTML += "!! " + escapeHTML(response.error) + "\n";
+                        } else {
+                            replPre.innerHTML += "=> " + escapeHTML(response.result) + "\n";
+                        }
+                        replPre.scrollTop = replPre.offsetHeight;
+                    });
+                }
+            };
+        })(i, frames[i], frameInfos[i]);
     }
     
     document.querySelector(".frames li:first-child").click();
