use scrollHeight instead of scrollTop

--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -344,7 +344,7 @@
                             } else {
                                 replPre.innerHTML += "=> " + escapeHTML(response.result) + "\n";
                             }
-                            replPre.scrollTop = replPre.offsetHeight;
+                            replPre.scrollTop = replPre.scrollHeight;
                         });
                     }
                 };
