--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -352,8 +352,6 @@
         })(i, frames[i], frameInfos[i]);
     }
     
-    document.querySelector(".frames li:first-child").click();
-    
     var applicationFrames = document.getElementById("application_frames");
     var allFrames = document.getElementById("all_frames");
     
@@ -380,6 +378,13 @@
     };
     
     applicationFrames.click();
+    
+    for(var i = 0; i < frames.length; i++) {
+        if(frames[i].attributes["data-context"].value == "application") {
+            frames[i].click();
+            break;
+        }
+    }
 })();
 </script>
 </html>
