--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -276,6 +276,9 @@
     var header = document.querySelector("header");
     var headerHeight = header.offsetHeight;
     
+    var previousCommands = new Array();
+    var previousCommandOffset = 0;
+
     apiCall = function(method, opts, cb) {
         var req = new XMLHttpRequest();
         req.open("POST", "/__better_errors/" + oid + "/" + method, true);
@@ -318,6 +321,35 @@
             replInput.focus();
         }
     }
+
+    function populateCommandPrompt(input, newOffset, bound) {
+        var index = previousCommands.length + newOffset;
+        var previousCommand;
+
+        if(index < previousCommands.length && index >= 0) {
+            // the new index is within the bounds of the 
+            // commands array, so grab the previously
+            // entered command.
+            previousCommandOffset = newOffset;
+            previousCommand = previousCommands[index];
+        }else{
+            // the new index isn't within the bounds
+            // of the array.
+            previousCommand = "";
+
+            if(index == bound) {
+                // set the offset just outside only
+                // if we're at the bounds of the array.
+                // this is so we only get one 'blank' 
+                // command and don't continue moving
+                // the offset when we shouldn't. 
+                previousCommandOffset = newOffset;
+            }
+        }
+        // now set the input's text to the previous command
+        // in the list. 
+        input.value = previousCommand; 
+    }
     
     for(var i = 0; i < frames.length; i++) {
         (function(index, el, frameInfo) {
@@ -335,7 +367,16 @@
             if(replInput) {
                 replInput.onkeydown = function(ev) {
                     if(ev.keyCode == 13) {
+                        // reset the command up/down arrow offset.
+                        previousCommandOffset = 0;
+
                         var text = replInput.value;
+
+                        if(text != "" && text !== undefined) {
+                            // push this command on to the previous commands list.
+                            previousCommands.push(text);
+                        }
+
                         replInput.value = "";
                         apiCall("eval", { "index": index, source: text }, function(response) {
                             replPre.innerHTML += ">> " + response.highlighted_input + "\n";
@@ -346,11 +387,19 @@
                             }
                             replPre.scrollTop = replPre.scrollHeight;
                         });
+                    }else if(ev.keyCode == 38) {
+                        // the user pressed the up arrow.
+                        populateCommandPrompt(replInput, previousCommandOffset - 1, -1);     
+                    }else if(ev.keyCode == 40) {
+                        // the user pressed the down arrow.
+                        populateCommandPrompt(replInput, previousCommandOffset + 1, previousCommands.length);
                     }
                 };
             }
         })(i, frames[i], frameInfos[i]);
     }
+    
+    document.querySelector(".frames li:first-child").click();
     
     var applicationFrames = document.getElementById("application_frames");
     var allFrames = document.getElementById("all_frames");
@@ -378,13 +427,6 @@
     };
     
     applicationFrames.click();
-    
-    for(var i = 0; i < frames.length; i++) {
-        if(frames[i].attributes["data-context"].value == "application") {
-            frames[i].click();
-            break;
-        }
-    }
 })();
 </script>
 </html>
