wrap frame name

--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -105,6 +105,7 @@
         font-family:Monaco, Incosolata, Consolas, monospace;
         font-size:14px;
         margin-bottom:4px;
+        word-wrap:break-word;
     }
     .location {
         color:#888888;
