make the exception message more prominent

--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -113,10 +113,7 @@
      * --------------------------------------------------------------------- */
 
     header.exception {
-        color: #999;
-        text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
-
-        padding: 10px 20px 14px 20px;
+        padding: 18px 20px;
 
         background-color: #222;
         background: -webkit-linear-gradient(top, #484848, #282828);
@@ -129,7 +126,7 @@
     /* Heading */
     header.exception h2 {
         font-weight: 200;
-        font-size: 22pt;
+        font-size: 11pt;
     }
 
 
@@ -149,7 +146,9 @@
     }
 
     header.exception p {
-        font-size: 12pt;
+        font-weight: 200;
+        font-size: 20pt;
+        color: white;
     }
 
     /* ---------------------------------------------------------------------
