--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -93,7 +93,7 @@
 
         .frame_info {
             right: 0;
-            width: 60%;
+            left: 40%;
 
             padding: 20px;
             padding-left: 40px;
@@ -116,11 +116,12 @@
         padding: 18px 20px;
 
         background-color: #222;
-        background: -webkit-linear-gradient(top, #484848, #282828);
         color: #aaa;
         text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
         font-weight: 200;
-        box-shadow: inset 0 -5px 3px -3px rgba(0, 0, 0, 0.05), inset 0 -1px 0 rgba(0, 0, 0, 0.05), inset 0 1px 0 rgba(0, 0, 0, 0.5), inset 0 2px 0 rgba(255, 255, 255, 0.3);
+        box-shadow: inset 0 -5px 3px -3px rgba(0, 0, 0, 0.05), inset 0 -1px 0 rgba(0, 0, 0, 0.05);
+
+        -webkit-text-smoothing: antialiased;
     }
 
     /* Heading */
@@ -157,10 +158,9 @@
 
     nav.tabs {
         border-top: solid 1px #333;
-        border-bottom: solid 1px #111;
+        border-bottom: solid 1px #1a1a1a;
 
         background-color: #444;
-        background: -webkit-linear-gradient(top, #444, #222);
         text-align: center;
 
         padding: 6px;
@@ -220,6 +220,8 @@
     ul.frames li {
         background-color: #f8f8f8;
         background: -webkit-linear-gradient(top, #f8f8f8, #f0f0f0);
+        background: -moz-linear-gradient(top, #f8f8f8, #f0f0f0);
+        background: linear-gradient(top, #f8f8f8, #f0f0f0);
         border-bottom: solid 1px #e2e2e2;
         padding: 7px 20px;
 
@@ -253,9 +255,8 @@
 
     /* Selected frame */
     ul.frames li.selected {
-        background-color: #39a;
-        background: -webkit-linear-gradient(top, #39a, #179);
-        box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.2), inset 0 2px 0 rgba(255, 255, 255, 0.2);
+        background: #39a;
+        box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.1), inset 0 2px 0 rgba(255, 255, 255, 0.01), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
     }
 
     ul.frames li.selected .name,
@@ -448,16 +449,28 @@
      * --------------------------------------------------------------------- */
 
     .sub {
-        border-top: solid 2px #ccc;
-        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3);
         padding: 10px 0;
         margin: 10px 0;
+    }
+
+    .sub:before {
+        content: '';
+        display: block;
+        width: 100%;
+        height: 4px;
+
+        border-radius: 2px;
+        background: rgba(0, 150, 200, 0.05);
+        box-shadow: 1px 1px 0 rgba(255, 255, 255, 0.7), inset 0 0 0 1px rgba(0, 0, 0, 0.04), inset 2px 2px 2px rgba(0, 0, 0, 0.07);
     }
 
     .sub h3 {
         color: #39a;
         font-size: 1.1em;
-        margin-bottom: 10px;
+        margin: 10px 0;
+        text-shadow: 0 1px 0 rgba(255, 255, 255, 0.6);
+
+        -webkit-font-smoothing: antialiased;
     }
 
     .sub .inset {
@@ -465,7 +478,7 @@
     }
 
     .sub table td {
-        border-top: solid 1px #ddd;
+        border-top: dotted 1px #ddd;
         padding: 7px 1px;
         width: 90%;
     }
